<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home"
            />
        <item android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_fav"
            />
        <item android:id="@+id/nav_his"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_his"
            />
    </group>
    <item
        android:title="@string/nav_acc">
        <menu>
            <item android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/nav_profile"
                />
            <item android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout"/>
        </menu>
    </item>

</menu>